2016-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdebug.c:
	  Debug info for block-copy-initialized global variables, patch #262 by Peter Dons Tychsen.
	* src/SDCCdwarf2.c:
	  Fix handling of declared, but unused global vairables in debug output, patch #263 by Peter Dons Tychsen.
	* src/z80/peep.c:
	  More accurate handling of functions returning long long for peephole optimizer.

2016-01-18 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	  Apply a modified version of patch #261 by Peter Dons Tychsen.
	* support/regression/bug-2455.c
	  Improve test case.

2016-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Fix pointer dereference issue, patch #261 by Peter Dons Tychsen.

2016-01-17 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/non-free/include/pic14/*.h,
	  device/non-free/include/pic16/*.h,
	  device/non-free/lib/pic14/libdev/*.c,
	  device/non-free/lib/pic16/libdev/*.c:
	  Updated the device files.

2016-01-17 Molnar Karoly <molnarkaroly AT users.sf.net>
	* src/pic14/pcode.c,
	  src/pic14/pcode.h,
	  src/pic16/ralloc.c,
	  src/pic16/ralloc.h,
	  src/pic16/pcodepeep.c,
	  src/pic16/ralloc.c,
	  src/pic16/ralloc.h:
	  On more place I exchanged the "char *" to "const char *".

	* src/regression/Makefile:
	  Added the option to CFLAGS: --no-warn-non-free

2016-01-16 Molnar Karoly <molnarkaroly AT users.sf.net>
	* src/pic14/gen.c,
	  src/pic14/pcode.c:
	  Each function has its own code section.

	* src/pic16/pcode.c:
	  Fix a gcc warning.

2016-01-15 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	  Fix bug #2455.
	* support/regression/bug-2455.c
	  Add a new test case.

2016-01-14 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/lib/pic14/configure,
	  device/lib/pic14/configure.ac,
	  device/lib/pic16/configure.ac:
	  Do away with the automake warning:
	  "option 'subdir-objects' is disabled"

	* device/lib/pic16/Makefile.in,
	  device/lib/pic16/aclocal.m4,
	  device/lib/pic16/configure,