@@ -6,6 +6,8 @@
 	  Fix handling of declared, but unused global vairables in debug output, patch #263 by Peter Dons Tychsen.
 	* src/z80/peep.c:
 	  More accurate handling of functions returning long long for peephole optimizer.
+	* src/SDCCmain.c:
+	  Fix stream for help output, patch #264 by Peter Dons Tychsen.
 
 2016-01-18 Ben Shi <powerstudio1st AT 163 DOT com>
 
